- Separated flak burst from shrapnel burst
- Added fluid drag
 - Has data pack config
 - Currently supports water, lava, honey, and chocolate
- Added projectile skipping on fluids
 - Added separate fluid bounce chance config
[Addons, integration] - Added ability to register multiple fluid blob effect handlers for a single fluid type
- Refactor projectile properties to be less inheritance-based (BREAKING)
 - New approach involves projectile-specific serializers that projectiles must reference instead of getting wildcard
 - This will break existing serializers and retrieval of properties
 - Some config files will be broken
  - All fields that are either "explosion_power" or "explosive_power" are now "explosive_power"
- Rework drag kinematics to ease factoring in dimensional density
 - All projectiles are affected
 - Previously, the drag equation was { vel' = vel * drag * dimensional density }
 - The drag equation is now { vel' = vel - vel * vel * drag * dimensional density }
 - Changed default drag values of big cannon and autocannon projectiles to 0.001 by default
 - Changed default drag values of projectile burst sub-projectiles to 0 by default
- Tweaked Mortar Stone to be able to handle equivalent of 3 Powder Charges, up from 1 Powder Charge
- Improved in-world effects of fluid blob fluids
 - Added ability for fluid blob to affect entities in-flight
 - Water-filled Fluid Blob harms entities sensitive to water and douses entities
 - Lava-filled fluid blob now lights certain blocks, opposite to water's effects
 - Potion-filled Fluid Blob applies its effect to entities while in flight
- Improved quick firing breech opening effects
 - Add more particles on opening and give them a bit of velocity
 - Add a short pickup delay for ejected items, can be configured on server
 - Can configure between item going directly into inventory and dropping item, default latter
- Improved smoke shell detonation sound